--- a/Tourism.API/appsettings.json
+++ b/Tourism.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER01;Database=TourismDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+    
   "AllowedHosts": "*"
 }
